# td

./: .gitignore  .python-version  README.md  common.py  editor.py  koji.py  main.py  pyproject.toml  sam.py  seiji.py  utils.py
kojisfolder/: TurretDesignKoji.py  kojistealingsamsturret.py
learning/: learning.md  q1.py  q2.py
levels/: level01.json  level02.json  level04.json
